--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-scss-lint": "^0.4.0",
     "node-neat": "^1.7.2",
     "rename": "^1.0.3"
   }
